// sysinfo.proto
syntax = "proto3";

message SysInfo {
  string SysName = 1;
  string NodeName = 2;
  string Release = 3;
  string Version = 4;
  string Machine = 5;
}