// gpu.proto
syntax = "proto3";
package yako;
option go_package = "yako/";

message Gpu {
  string GpuName = 1;
  string GpuID = 2;
  string BusID = 3;
  uint64 IRQ = 4;
  uint64 Major = 5;
  uint64 Minor = 6;
}

message GpuList {
  repeated Gpu GpuList = 1;
}